# PDF-navigate

./: .gitignore  README.md  pyproject.toml
app/: desktop.py  main.py
core/: config.py  db.py  embeddings.py  search.py
frontend/: app.js  index.html  styles.css
scripts/: ingest_sample.py
tests/: test_integration.py  test_scoring.py
